Fixes visibility issue on mobile

--- a/src/stylus/dev.styl
+++ b/src/stylus/dev.styl
@@ -26,12 +26,23 @@ body
   margin      0
   padding     0
   font-family 'Droid Sans', sans-serif
+  background  #111
 
 .bg--purple code
   color $black
 
 code
   color $red
+
+.dm
+  animation fadeIn .5s
+
+@keyframes fadeIn
+  from
+    opacity 0
+  to
+    opacity 1
+
 
 .dm-pnl
   display               flex !important
